--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: mongo:latest
     container_name: mongo
     restart: always
+    ports:
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
 
